resources/screen-common.less
/* ... */
.tools-inline li {
    margin: 0.25em 0 1em;
    border-bottom: solid 3px transparent;
    transition: 0.1s;
    border: 0px;

    &:hover {
        border: 0px;
    }

    &.selected {
        color: @green-bright;
        font-weight: 800;
        border: 0px;

        a {
            color: rgb(206, 206, 207);
        }
    }
}

#p-namespaces {
    float: left;

    li {
        margin-right: 1em;
    }
}

#p-views,
#p-more {
    float: right;

    li {
        margin-left: 1em;
    }
}

#ca-watch a {
    .ca-icon('images/star');
    .ca-icon-only();
}

#ca-unwatch a {
    .ca-icon('images/star-filled');
    .ca-icon-only();
}

#ca-view {
    .hidden();

    // Let's give anyone who forcibly brings it back a creepy eyeball
    a {
        .ca-icon('images/eyeball-grey');
    }
}

#siteNotice {
    font-size: 95%;
    margin: 0.5em auto 1.5em;
}

#localNotice {
    .box();
    padding: 0;
    text-align: center;

    p {
        margin-left: 1em;
        margin-right: 1em;
    }
}

/* Misc */

a {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.5);
    transition: 0.2s;

    &:hover,
    &:visited {
        color: rgba(255, 255, 255, 0.75);
        text-decoration: none;
    }
}

#p-navigation-label,
#p-tb-label,
#p-cactions-label,
#p-pagemisc-label {
    color: @green;
}

a.new,
.new a {
    color: #fd6a5d;
    transition: 0.2s;

    &:hover,
    &:visited {
        color: #fc1703;
    }
}

a.mw-selflink {
    color: rgb(206, 206, 207);
    font-weight: bold;
    text-decoration: inherit;
}

.mw-editsection {
    font-family: 'Inter', 'Segoe UI', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lato', 'Liberation Sans', 'Noto Sans',
        'Helvetica Neue', 'Helvetica', sans-serif;
    background-repeat: no-repeat;
    background-position: left bottom;
    padding-left: 20px;
    padding-top: 0.5em;

    a {
        display: inline-block;
        padding: 0.5em 0 0.25em;
        margin-right: 1em;

        &:first-of-type {
            // make the icon part of the first link
            padding-left: 20px;
            margin-left: -20px;
        }
    }
}

.mw-editsection-bracket {
    display: none;
}

.visual-clear {
    clear: both;
}

.mw-indicators {
    float: right;
    margin: 0.75em 0 0 1em;
}

.mw-indicator {
    display: inline-block;
}

div.magnify a {
    display: block;
    text-indent: 20px;
    white-space: nowrap;
    overflow: hidden;
    width: 20px;
    height: 20px;
    margin: 0 0 0.5em 0.5em;
    .background-image-svg('images/magnify-ltr.svg', 'images/magnify-ltr.png');
}

/* Subtitle area */
#contentSub {
    font-size: 84%;
    color: rgb(206, 206, 207);

    /* This forces "redirect page" (on a redirect page) etc. on a new line */
    .subpages {
        display: block;
    }
}

/* pre and code styles copypasted from core
 * /resources/src/mediawiki.skinning/elements.css and modified a bit */

.screenplay,
code,
tt,
kbd,
pre,
samp {
    font-family: 'Menlo', 'Consolas', 'Monaco', 'Noto Mono', 'Nimbus Mono L', monospace;
}

code,
pre,
.mw-code {
    color: rgb(206, 206, 207);
    background-color: rgb(69, 69, 72);
    border: 1px solid rgb(43, 43, 46);
}

code {
    padding: 1px 4px;
}

pre,
.mw-code {
    padding: 1em;
    /* Wrap lines in overflow. T2260, T103780 */
    white-space: pre-wrap;
}

.mw-body {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    dt {
        font-weight: normal;
        font-family: 'Inter', 'Linux Libertine', 'Times New Roman', 'Liberation Serif', 'Nimbus Roman', 'Noto Serif',
            'Times', serif;
        line-height: 1.125;
        margin: 1.25em 0 0.5em;
    }

    dt {
        font-weight: bold;
        font-family: 'Inter', 'Linux Libertine', 'Times New Roman', 'Liberation Serif', 'Nimbus Roman', 'Noto Serif',
            'Times', serif;
        line-height: 1.125;
        margin: 1.5em 0 0.5em;
        margin-bottom: 0.1em;
    }

    dl {
        margin-top: 0.2em;
        margin-bottom: 0.5em;
    }

    form dt {
        margin: 0 0.5em 0 0;
    }

    .firstHeading {
        text-align: center;
    }

    h1.firstHeading {
        margin: 0.25em 0 0.5em;
        border: 0px;
    }

    h1 {
        font-size: 2em;
        border: 0px;
    }

    h2 {
        font-size: 1.8em;
        border: 0px;
    }

    h3 {
        font-size: 1.6em;
    }

    h4 {
        font-size: 1.4em;
    }

    h5 {
        font-size: 1.25em;
    }

    h6 {
        font-size: 1.2em;
    }

    dt {
        margin-top: 1em;
    }

    dd {
        margin-bottom: 1em;
    }

    .mw-changeslist-legend dt {
        margin: 0 0.5em 0 0;
    }

    .mw-changeslist-legend dd {
        margin-bottom: 0;
    }

    // overflow:hidden on the header itself breaks tall scripts, but we need to hide
    // overflow on the border itself in output for proper thumb handling. Too weird to
    // change this everywhere, so we'll just do it for parser output for now.
    .mw-parser-output {
        h1,
        h2 {
            border-bottom: 0;

            &:after {
                content: '';
                display: block;
                border-bottom: solid 2px rgb(43, 43, 46);
                overflow: hidden;
            }
        }

        h1:after {
            border-bottom-width: 3px;
        }
    }
}

#siteSub {
    margin: -0.5em 0 0.5em 0;
    font-style: italic;
    font-family: 'Inter', 'Linux Libertine', 'Times New Roman', 'Liberation Serif', 'Nimbus Roman', 'Noto Serif',
        'Times', serif;
    display: none;
}

hr {
    border-width: 1px;
    border-color: rgb(43, 43, 46);
    border-style: solid none solid none;
    margin: 0.5em 0;
}

pre {
    overflow: auto;
    white-space: pre-wrap;
}

p {
    margin: 1em 0;
}

ul {
    padding: 0;
    margin: 0.3em 0 0 1.6em;
}

.mw-empty-elt {
    display: none;
}

.center {
    margin: auto;
    text-align: center;
}

/* Thumbnails */
.floatright,
.tright {
    margin: 0 0 0.5em 0.5em;
    padding: 0 0 1em 1.5em;
}
/* ... */

